# planning-validator

./: .agent-plan.md  .pre-commit-config.yaml  AGENTS.md  LICENSE  README.md  llms.txt  pyproject.toml
.github/: pr-agent-context-template.md
.github/workflows/: ci.yml  pr-agent-context-refresh.yml  reusable-planning-validator.yml
docs/: 00_project_overview.md  01_system_architecture.md  02_config_schema.md  03_detector_contract.md  04_patcher_pr_contract.md  05_implementation_plan.md  IMPLEMENTATION_STATUS.md  README_bundle.md  RELEASE.md
examples/configs/: monorepo.yml  simple.yml
examples/target-repo/: README.md
examples/target-repo/.github/: planning-validator.yml
examples/target-repo/docs/: roadmap.md  tasks.md
prompts/: system.md
src/planning_validator/: __init__.py  cli.py  config.py  file_io.py  github_api.py  gitignore_filter.py  models.py  repo_snapshot.py
src/planning_validator/detector/: __init__.py  detector.py  scoring.py  signals.py
src/planning_validator/patcher/: __init__.py  file_patch_validator.py  llm_client.py  patcher.py  prompt_builder.py  response_parser.py
src/planning_validator/pr/: __init__.py  branch_manager.py  github_client.py  pr_body.py  pr_manager.py
tests/integration/: conftest.py  test_end_to_end_simple.py  test_idempotent_update_existing_pr.py  test_noop_when_fresh.py
tests/unit/: test_cli.py  test_config.py  test_detector.py  test_file_io.py  test_github_api.py  test_gitignore_filter.py  test_models.py  test_package.py  test_patcher.py  test_pr_manager.py  test_repo_snapshot.py
(+15 files in other folders)
